--- a/clean.ipynb
+++ b/clean.ipynb
@@ -570,6 +570,53 @@
    "source": [
     "df.to_pickle(\"./rsc/spotify2023.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   track_name            953 non-null    object\n",
+      " 1   artist_name           953 non-null    object\n",
+      " 2   artist_count          953 non-null    int64 \n",
+      " 3   released_year         953 non-null    int64 \n",
+      " 4   released_month        953 non-null    int64 \n",
+      " 5   released_day          953 non-null    int64 \n",
+      " 6   in_spotify_playlists  953 non-null    int64 \n",
+      " 7   in_spotify_charts     953 non-null    int64 \n",
+      " 8   streams               953 non-null    int64 \n",
+      " 9   in_apple_playlists    953 non-null    int64 \n",
+      " 10  in_apple_charts       953 non-null    int64 \n",
+      " 11  in_deezer_playlists   953 non-null    int32 \n",
+      " 12  in_deezer_charts      953 non-null    int64 \n",
+      " 13  in_shazam_charts      953 non-null    int32 \n",
+      " 14  bpm                   953 non-null    int64 \n",
+      " 15  key                   953 non-null    object\n",
+      " 16  mode                  953 non-null    object\n",
+      " 17  danceability          953 non-null    int64 \n",
+      " 18  valence               953 non-null    int64 \n",
+      " 19  energy                953 non-null    int64 \n",
+      " 20  acousticness          953 non-null    int64 \n",
+      " 21  instrumentalness      953 non-null    int64 \n",
+      " 22  liveness              953 non-null    int64 \n",
+      " 23  speechiness           953 non-null    int64 \n",
+      "dtypes: int32(2), int64(18), object(4)\n",
+      "memory usage: 171.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
